--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "node-lambda-events": "0.1.3"
   },
   "devDependencies": {
+    "serverless": "^2.62.0",
     "aws-sdk-mock": "~1.6.1",
     "babel-core": "^6.13.2",
     "babel-eslint": "^6.1.2",
