--- a/serverless.yml
+++ b/serverless.yml
@@ -1,10 +1,16 @@
 service: CloudsearchCloudformationResource
 
-frameworkVersion: ">=1.1.0 <2.0.0"
+frameworkVersion: "2"
 
 provider:
   name: aws
-  runtime: nodejs4.3
+  runtime: nodejs12.x
+  region: ${opt:region, "us-west-2" }
+  stage: ${opt:stage, "mxu3" }
+  profile: ${opt:profile}
+  logRetentionInDays: 14
+  lambdaHashingVersion: 20201221
+
   iamRoleStatements:
     - Effect: Allow
       Action:
